syntax = "proto3";
package  efincore;

option go_package = "github.com/artilugio0/efincore/proto";

service EfinProxy {
    rpc GetStats (GetStatsInput) returns (GetStatsOutput);

    rpc GetRequestsIn (GetRequestsInInput) returns (stream Request);
    rpc RequestsMod (stream Request) returns (stream Request);
    rpc GetRequestsOut (GetRequestsOutInput) returns (stream Request);

    rpc GetResponsesIn (GetResponsesInInput) returns (stream Response);
    rpc ResponsesMod (stream Response) returns (stream Response);
    rpc GetResponsesOut (GetResponsesOutInput) returns (stream Response);
}

message GetRequestsInInput {}
message GetRequestsOutInput {}

message GetResponsesInInput {}
message GetResponsesOutInput {}

message Request {
    string id = 1;
    string version = 2;
    string url = 3;
    string method = 4;
    repeated Header headers = 5;
    bytes body = 6;
}

message Header {
    string name = 1;
    string value = 2;
}

message Response {
    string id = 1;
    string version = 2;
    string status = 3;
    uint32 status_code = 4;
    repeated Header headers = 5;
    bytes body = 6;
}

message Stat {
    string name = 1;
    int64 value = 2;
}

message GetStatsInput {}
message GetStatsOutput {
    repeated Stat stats = 1;
}
